
Erik H is Erik Huelsmann
Chris T is Chris Travers
Steven M is Steven Marshall
Havard S is Havard Sorli

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.45
* Cleaned up sql files so App::LedgerSMB::Admin (Chris T)
* Fixed pricematrix prices not respected for vendors (Chris T, bug 1230)


Chris T is Chris Travers

Changelog for 1.3.44
* Allow blank salutations, bug 1204. (Chris T)
* Easier creation of select widgets with blanks. (Chris T)
* Display vendor's sku if available on orders and invoices, bug 1218 (Chris T)
* Fixed issue where locked batch prevents login (Chris T)

Chris T is Chris Travers

Changelog for 1.3.43
* Fixed bug 1136, manual tax not respecting user number formats (Chris T)
* Fixed bug 1171, invoices showing as current when not (Chris T)
* Fixed bug 1140, shipto causes exchangerate format lost (Chris T)
* Fixed errors running custom queries where no table yet defined (Chris T)
* Use Shipto button works right away when adding from invoice (Chris T)
* Fixed bug 1196, number formatting issue when decimal separator is comma, like 1.000,00 (Pongracz I)
* Fixed bug 1169, sorting orders results in empty list (Chris T)
* Fixed bug 1173, employee manager checkbox badly handled (Chris T)
* Fixed bug 1199, can change shipto with no effect after positng (Chris T)
* Fixed issue 1183, added login name to menu pane (Chris T)
* Fixed bug 1185, email address not shown when emailing statements (Chris T)

Chris T is Chris Travers
Pongracz I is Pongracz Istvan


Changelog for 1.3.42
* Fix for missing emails when emailing orders/quotations (1073, Chris T)
* Fix doubled email addresses when emailing invoice (1186, Pongracz I)
* Hungarian translation changes (Pongracz I)
* Fix for inactive customers showing up on receipt search (1095, Chris T)
* Hungarian translation changes (Pongracz I)
* View file_links is no longer dropped before rebuild (Chris T, 1099)